Sun Sep 11 12:04:11 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (Symbol_CreateSymbolOut): Update local label error.

Sat Sep 10 10:51:37 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputEnvSub): When cross-compiled, substitute $ into _
	when initial environment variable retrieve didn't work.

Sun Aug  7 18:39:49 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* lexAcorn.c (lexAcornUnop, lexAcornBinop): Don't consume characters
	which weren't expected.
	* lex.c (lexGetPrim, lexGetBinop): Return : back to input stream if
	tokenizing failed.

Sun Aug  7 17:30:45 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (Code_EvalLowest): Don't call operator size for non-defined
	symbols.
	* eval.c (evalUnop): Op_size: Remove implementation for non-defined
	symbols.
	* regression/tests_pass/operator_questionmark.s: Add tests.
	* asm.c (DEBUG_ASM): More debug.
	* regression/tests_pass/load_literal4.s: Add.

Thu Aug  4 22:58:58 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_assert): Make it phase aware.
	* regression/tests_pass/assert.s: Added.
	* regression/tests_pass/if_else.s: Removed bogus 2nd parameter of
	ASSERT.
	* error.c (error): Don't call Input_ShowLine during phase 1.
	* local.c (Local_PrepareForPhase): Surpress compiler warning.
	* eval.c (evalBinop): Teach Op_eq about comparing ValueCode and
	ValueSymbol values.

Thu Aug  4 01:37:50 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_DoPass, gASM_Phase): Add.
	(ASM_Assemble): Assemble source code twice.
	* asm.h (gASM_Phase): Add.
	* commands.c (DefineInt): Make it phase aware.
	(DefineReal): Likewise.
	* decode.c (decode): Likewise.
	* eval.c (evalUnop): Likewise.
	* symbol.c (Symbol_OutputForAOF): Support area mapping symbols.
	(Symbol_OutputForELF): Likewise.
	* m_cpuctrl.c (branch_shared): Likewise.
	(m_adr): Likewise.
	* help_cop.c (help_copAddr): Likewise.
	* error.c (errorCore): Likewise.
	(errorCoreLine): Likewise.